--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ beautifulsoup4==4.11.1
 matplotlib==3.5.3
 numpy==1.21.6
 requests==2.28.1
-scikit_learn==1.1.2
+scikit_learn
 seaborn==0.12.0
 urllib3==1.26.12
