--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,42 @@
 beautifulsoup4==4.11.1
+certifi==2022.12.7
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+cycler==0.11.0
+filelock==3.9.0
+fonttools==4.38.0
+huggingface-hub==0.12.1
+idna==3.4
+importlib-metadata==6.0.0
+joblib==1.2.0
+kiwisolver==1.4.4
+lxml==4.9.2
 matplotlib==3.5.3
+nltk==3.8.1
 numpy==1.21.6
+packaging==23.0
+pandas==1.1.5
+Pillow==9.4.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.7.1
+PyYAML==6.0
+regex==2022.10.31
 requests==2.28.1
-scikit_learn
+scikit-learn==1.0.2
+scipy==1.7.3
 seaborn==0.12.0
+sentence-transformers==2.2.2
+sentencepiece==0.1.97
+six==1.16.0
+soupsieve==2.4
+threadpoolctl==3.1.0
+tokenizers==0.13.2
+torch==1.13.1
+torchvision==0.14.1
+tqdm==4.64.1
+transformers==4.26.1
+typing_extensions==4.5.0
 urllib3==1.26.12
+zipp==3.14.0
